--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,12 @@
-certifi==2019.3.9
-chardet==3.0.4
-cognitive-face==1.4.2
-Django==2.1.5
+Django==2.2.4
 django-crispy-forms==1.7.2
-django-extensions==2.1.5
-django-filter==2.1.0
-django-filters==0.2.1
+django-extensions==2.2.1
+django-rest-framework==0.1.0
 django-static-jquery==2.1.4
-idna==2.8
-Pillow==5.4.1
-psycopg2==2.7.7
-pydotplus==2.0.2
-pyparsing==2.3.1
-pytz==2018.9
-requests==2.21.0
+djangorestframework==3.10.2
+numpy==1.17.0
+pandas==0.25.1
+python-dateutil==2.8.0
+pytz==2019.2
 six==1.12.0
-urllib3==1.24.1
+sqlparse==0.3.0
